--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,11 +20,9 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "autoprefixer": "^10.4.21",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.12"
+    "postcss": "^8.5.3"
   }
 }
